# rusty-esp-knob

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md
companion/: Cargo.toml
companion/src/: audio.rs  config.rs  icons.rs  main.rs  tray_app.rs  worker.rs
esp-hal-patched/: Cargo.toml
esp-hal-patched/src/: sync.rs
esp-wifi-patched/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
esp-wifi-patched/src/: lib.rs
esp-wifi-patched/src/common_adapter/: mod.rs
esp-wifi-patched/src/preempt_builtin/timer/: mod.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: backlight.rs  board.rs  encoder.rs  haptic.rs  main.rs  nvs_config.rs  touch.rs  usb_serial.rs  wifi_tcp.rs
firmware/src/sh8601/: init.rs  mod.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  lib.rs  messages.rs
