[package]
name = "companion"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
serialport = "4.7"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
