[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1.0", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16", features = ["esp32s3", "log-04"] }
esp-alloc = "0.9"
log = "0.4"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3"] }
heapless = "0.8"
u8g2-fonts = "0.5"
protocol = { path = "../protocol" }
