[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "=1.0.0", features = ["esp32s3", "unstable", "octal_psram"] }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16", features = ["esp32s3", "log-04"] }
esp-alloc = { version = "0.9", default-features = false }
critical-section = "1.2"
log = "0.4"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3"] }
heapless = "0.8"
u8g2-fonts = "0.5"
libm = "0.2"
protocol = { path = "../protocol" }
esp-storage = { version = "0.8", features = ["esp32s3"] }
embedded-storage = "0.3"
esp-wifi = { version = "0.15.1", default-features = false, features = ["esp32s3", "wifi", "smoltcp", "builtin-scheduler", "log-04", "esp-alloc"] }
smoltcp = { version = "0.12", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-dhcpv4"] }
static_cell = "2"
nb = "1.1"
